# unimenu

./: .pre-commit-config.yaml  README.md  menu_config.yaml  menu_config_append.yaml  openmenu.py  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
dev/: README.md  pyproject.toml
dev/manual_tests/: generic.py
dev/unimenu_samples/: any_dcc_test.py  blender_custom_icon.py  maya_startup_plugin.py  menu_config_blender.yaml  menu_config_unreal_append.yaml  menu_config_unreal_append_existing_menu.yaml  nuke_sample.py  unreal_context_menu.py
manual_tests/: generic.py  krita.py  substance_painter_test.py
openmenu/: __init__.py  blender.py  core.py  krita.py  marmoset.py  max.py  maya.py  substance_painter.py  test.py  unreal.py  utils.py
openmenu/dccs/: __init__.py  _abstract.py  _abstract_qt.py  blender.py  krita.py  marmoset.py  max.py  maya.py  substance_painter.py  unreal.py
samples/: any_dcc_test.py  config.json  maya_startup_plugin.py  menu_config.yaml  menu_config_append.yaml  menu_config_blender.yaml  menu_config_unreal.yaml  menu_config_unreal_append.yaml  qt_sample.py  qt_system_tray.py  unreal_context_menu.py
unimenu/: __init__.py  core.py  utils.py
unimenu/apps/: __init__.py  _abstract.py  blender.py  hiero.py  katana.py  mari.py  marmoset.py  max.py  maya.py  nuke.py  qt.py  unreal.py
unimenu/dccs/: __init__.py  _abstract.py  _abstract_qt.py  blender.py  krita.py  marmoset.py  max.py  maya.py  qt.py  substance_painter.py  unreal.py
unreal_menu/: __init__.py
