[build-system]
requires = ["setuptools", "setuptools-scm"]
#build-backend = "setuptools.build_meta"


[tool.setuptools]
packages = ["unimenu"]


[project]
name = "unimenu"
authors = [
    {name = "hannes"},
]
description = "easy menus from a single config across apps"
readme = "README.md"
requires-python = ">=3.4"
keywords = ["dcc", "pipeline", "menu", "config"]
#license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3.7",
]
dependencies = [
    'importlib-metadata; python_version<"3.7"',
]
#dynamic = ["version"]
version = "3.0.0"

[project.optional-dependencies]
yaml = ["pyyaml"]

#[project.scripts]
#my-script = "my_package.module:function"


[project.urls]
Homepage = "https://github.com/hannesdelbeke/unimenu"
Documentation = "https://github.com/hannesdelbeke/unimenu/wiki"