[build-system]
requires = ["setuptools", "setuptools-scm"]
#build-backend = "setuptools.build_meta"


[tool.setuptools]
packages = ["unimenu_samples"]  # todo later add tests


[project]
name = "unimenu-dev"
authors = [
    {name = "hannes"},
]
description = "modules to help with unimenu development"
readme = "README.md"
requires-python = ">=3.4"
keywords = ["unimenu", "menu", "dev"]
# license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3.7",
]
dependencies = [
    'importlib-metadata; python_version<"3.7"', "unimenu",
]
#dynamic = ["version"]
version = "0.0.1"

[project.optional-dependencies]
yaml = ["pyyaml"]

#[project.scripts]
#my-script = "my_package.module:function"


[project.urls]
Homepage = "https://github.com/hannesdelbeke/unimenu"
Documentation = "https://github.com/hannesdelbeke/unimenu/wiki"